# shavtzak_drf

./: db.sqlite3  manage.py  pyproject.toml
shavtzak_drf/: asgi.py  settings.py  urls.py  wsgi.py
shavtzak_manager/: apps.py  permissions.py  urls.py
shavtzak_manager/migrations/: 0001_initial.py  0002_usersystemcustomfields.py
shavtzak_manager/models/: __init__.py  entity_model.py  entity_user_custom_field_definition.py  user_system_custom_fields_model.py
shavtzak_manager/serializers/: __init__.py  add_entity_initializer_serializer.py  add_user_serializer.py  entity_serializer.py  login_serializer.py
shavtzak_manager/tests/: __init__.py  test_add_entity_initializer.py
shavtzak_manager/views/: __init__.py  add_entity_initializer_view.py  add_user_view.py  entity_view.py  login_view.py
shavtzak_manager/viewset/: entity.py
shavtzak_user/: apps.py
