[tool.poetry]
name = "shavtsak-drf"
version = "0.1.0"
description = ""
authors = ["YonchRibak <109977685+YonchRibak@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "shavtsak_drf"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "shavtzak_drf.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
